# xolo-pipeline

./: .gitignore  LICENSE  README.md  config.yaml  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  project-plan.md
.github/ISSUE_TEMPLATE/: bug_report.yml  future_request.yml
.github/scripts/: create_issues.py
.github/workflows/: create-issues.yml  docs.yml  release.yml
cli/: main.py
cli/commands/: settings.py  shot.py  show.py
core/: utils.py
core/ocio/ACES-1.2/: config.ocio
core/ocio/ACES-1.2/looks/: heatmap_hue.spi3d
core/ocio/ACES-1.3/: config.ocio
core/ocio/ACES-1.3/looks/: heatmap_fire.spi3d
core/ocio/basic/: config.ocio
core/ocio/basic/looks/: heatmap_classic.spi3d  heatmap_diverging.spi3d
core/ocio/filmic-blender/: config.ocio
core/templates/: project_type.yaml
docs/: commands.md  getting-started.md  index.md
docs/tutorial/: commands.md  installation.md
docs/utils/: load_config.md
tests/: test_main_project.py
xolo/: __main__.py
xolo/core/: config.py  models.py  project.py
xolo/utils/: settings.py
xolo_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
