[project]
name = "xolo-pipeline"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]




[project.scripts]
xolo = "xolo.__main__:app"


[tool.uv]
package = true

[tool.pdm.scripts]
docs.serve = "mkdocs serve"
docs.build = "mkdocs build"