[project]
name = "xolo-pipeline"
version = "0.0.1"
description = "XOLO Pipeline: A lightweight pipeline framework for animation, VFX and commercials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "opentimelineio>=0.17.0",
    "pyblish-base>=1.8.12",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]




[project.scripts]
xolo = "cli.main:app"

[tool.uv]
package = true

[tool.pdm.scripts]
docs.serve = "mkdocs serve"
docs.build = "mkdocs build"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "dcc*", "backend*"]
exclude = ["frontend*"]
